# tree-sitter-apparmor

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-apparmor.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_apparmor/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterApparmorTests/: TreeSitterApparmorTests.swift
examples/: basic.aa  full.aa  string.aa
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: abi.txt  comment.txt  include.txt  variable.txt
