[package]
name = "tree-sitter-apparmor"
description = "Apparmor profiles"
version = "0.1.0"
authors = ["Su3h7aM <matheusgasorce@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "apparmor"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/su3h7am/tree-sitter-apparmor"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
